--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 							<html>
 							<head>
-							<title> Login de Usu·rio </title>
+							<title> Login de Usu√°rio </title>
 							</head>
 							<body>
 							<form method="POST" action="login.php">
