--- a/index.html
+++ b/index.html
@@ -2,64 +2,136 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Sensoriamento Realtime com Firebase</title>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/7.14.6/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/7.14.6/firebase-auth.js"></script>
-    <script defer src="/__/firebase/7.14.6/firebase-database.js"></script>
-    <script defer src="/__/firebase/7.14.6/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/7.14.6/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <style>
+      body{
+        background-color: #E0E0E0;
       }
+
+      .content {
+        margin-top: 30px;
+      }
+
+      nav {
+        background-color: #F9A825;
+      }
+
+      .statistic {
+        font-size: 8em;
+        margin-top: 15px !important;
+      }
+
+      .card {
+        min-height: 250px;
+      }
+
+      .activator {
+        cursor: pointer;
+      }
+
+      @media screen and (max-width: 600px){
+        .statistic {
+          font-size: 5em;
+        }
+      }
+
     </style>
+
   </head>
   <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+    <div class="navbar-fixed">
+      <nav class="nav-extended">
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo center">Bem vindo Johnatan</a>
+        </div>
+        <div class="nav-content center">
+          <h6>Sensoriamento Realtime com Firebase</h6>
+        </div>
+      </nav>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
+    <div class="container content">
+      <br/>
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image center">
+              <span id="currentTemp" class="statistic">-</span>
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">
+                Temperatura
+                <i class="material-icons right">more_vert</i>
+              </span>
+              Clique para ver histórico
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">
+                Histórico
+                <i class="material-icons right">close</i>
+              </span>
+              <canvas id="tempLineChart"></canvas>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image center">
+              <span id="currentUmid" class="statistic">-</span>
+            </div>
+            <div class="card-content activator">
+              <span class="card-title grey-text text-darken-4">
+                Umidade
+                <i class="material-icons right">more_vert</i>
+              </span>
+              Clique para ver histórico
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">
+                Histórico
+                <i class="material-icons right">close</i>
+              </span>
+              <canvas id="umidLineChart"></canvas>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image center">
+              <i id="currentPresence" class="material-icons statistic">my_location</i>
+            </div>
+            <div class="card-content">
+              <span class="card-title grey-text text-darken-4">
+                Presença
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card" style="padding-bottom:20px">
+            <div class="card-image center">
+              <i id="currentLamp" class="material-icons statistic">flash_on</i>
+            </div>
+            <div class="card-content">
+              <span class="card-title grey-text text-darken-4">
+                Lampada
+              </span>
+              <a class="waves-effect waves-light btn col s12" id="btn-lamp">
+                <i class="material-icons left">flash_on</i>
+                Ligar/Desligar
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script src="app.js"></script>
 </html>
