--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a href="#" class="brand-logo center">Bem vindo Johnatan</a>
         </div>
         <div class="nav-content center">
-          <h6>Sensoriamento Realtime com Firebase</h6>
+          <h6>Casa</h6>
         </div>
       </nav>
     </div>
