--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sensoriamento Realtime com Firebase</title>
+    <title>Minha Casa</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -49,7 +49,7 @@
           <a href="#" class="brand-logo center">Bem vindo Johnatan</a>
         </div>
         <div class="nav-content center">
-          <h6>Casa</h6>
+          <h6></h6>
         </div>
       </nav>
     </div>
