--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }
 
       .card {
-        min-height: 250px;
+        min-height: 250p
       }
 
       .activator {
@@ -43,6 +43,7 @@
 
   </head>
   <body>
+
     <div class="navbar-fixed">
       <nav class="nav-extended">
         <div class="nav-wrapper">
