--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 
   </head>
   <body>
-
     <div class="navbar-fixed">
       <nav class="nav-extended">
         <div class="nav-wrapper">
@@ -54,6 +53,13 @@
         </div>
       </nav>
     </div>
+
+    <form id="sendForm">
+      <input id="sendText"/>
+    
+      <pre id="incomming"></pre>
+
+    
     <div class="container content">
       <br/>
       <div class="row">
@@ -187,6 +193,7 @@
         </div>
       </div>
     </div>
+  </form>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
